[tool.poetry]
name = "allms"
version = "1.0.4"
description = ""
authors = ["Allegro Opensource <opensource@allegro.com>"]
readme = "README.md"
packages = [{include = "allms"}]

[tool.poetry.dependencies]
python = "^3.10"
fsspec = "^2023.6.0"
google-cloud-aiplatform = "1.38.0"
pydash = "^7.0.6"
transformers = "^4.34.1"
pydantic = "2.7.4"
langchain = "^0.0.351"
aioresponses = "^0.7.6"
tiktoken = "^0.7.0"
openai = "1.51.0"
pytest-mock = "^3.14.0"
respx = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
mkdocs = "^1.5.3"
build = "^1.0.3"
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
