[tool.poetry]
name = "allms"
version = "1.0.10"
description = ""
authors = ["Allegro Opensource <opensource@allegro.com>"]
readme = "README.md"
packages = [{include = "allms"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
fsspec = "^2023.6.0"
google-cloud-aiplatform = "1.70.0"
pydash = "^7.0.6"
transformers = "^4.34.1"
pydantic = "2.7.4"
langchain = "0.3.6"
tiktoken = "^0.7.0"
openai = "1.52.0"
pytest-mock = "^3.14.0"
respx = "^0.21.1"
langchain-community = "^0.3.5"
langchain-google-vertexai = "^2.0.7"
sentencepiece = "^0.2.0"
langchain-openai = "^0.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
mkdocs = "^1.5.3"
build = "^1.0.3"
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
