[tool.poetry]
name = "allms"
version = "1.0.13"
description = ""
authors = ["Allegro Opensource <opensource@allegro.com>"]
readme = "README.md"
packages = [{include = "allms"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
fsspec = "^2025.3.0"
google-cloud-aiplatform = "1.85.0"
pydash = "^8.0.5"
transformers = "^4.50.0"
pydantic = "^2.10.6"
langchain = "0.3.21"
tiktoken = "^0.9.0"
openai = "1.68.0"
pytest-mock = "^3.14.0"
respx = "^0.22.0"
langchain-community = "^0.3.20"
langchain-google-vertexai = "^2.0.15"
sentencepiece = "^0.2.0"
langchain-openai = "^0.3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.6"
mkdocs = "^1.6.1"
build = "^1.2.2.post1"
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
